--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -158,29 +158,42 @@ $$
 Бид энэ төсөлд логистик регрессийн загварыг гараар хэрэгжүүлсэн. Яагаад гэвэл sklearn-ийн `LogisticRegression` нь олон зүйлийг автоматаар хийдэг бөгөөд бид хэрхэн ажилладгийг нь ойлгохыг илүүд үзлээ. Мөн сурах хурдны бууралт, class weighting зэрэг сонирхолтой зүйлсийг өөрсдөө туршиж үзэхийг хүссэн.
 
 ## Логистик регрессийн үндэс
-
+ 
 Логистик регресс нь хоёртын ангилал хийх суурь загваруудын нэг юм. Шугаман регресс нь тасралтгүй утгуудыг таамагладаг бол логистик регресс нь аливаа инстанц нь тодорхой классын байх магадлалыг тооцоолдог.
-
-Оролтын хувьсагч $\mathbf{x}$ -н хувьд 
+ 
+Оролтын хувьсагч $\mathbf{x}$ -н хувьд
 $$
 P(y = 1 \mid \mathbf{x})
 $$
-
+ 
 буюу гаралт $y$ нь $1$-тэй тэнцүү байх магадлалыг олох зорилготой.
-
+ 
+Энэ төслийн хувьд бидний зорилтод хувьсагч маань `income > 50K` үед `1`, `income` $\leq50K$ үед $0$ гэсэн хоёр л утга авна. Иймээс түүвэр болгоны хувьд энэ хувьсагчийг санамсаргүй хувьсагч болгон загварчилж болно.  
+ 
+$$
+y_i \sim \text{Bernoulli}(p_i)
+$$
+ 
+Энд амжилтын магадлал $p_i$ нь онцлог $x_i$-с хамаардаг. Модел нэг түүврийн хувьд таамаглах магадлал нь дараах томъёгоор илэрхийлэгдэнэ:
+ 
+$$
+p_i = P(y_i=1 \mid x_i) = \sigma(w^\top x_i + b)
+$$
+ 
+ 
 Эхлээд бид оролтуудын шугаман тэгшитгэлийг бодно:
-
+ 
 $$
 z_i = \mathbf{w}^\top \mathbf{x}_i + b
 $$
-
+ 
 Үүнд:
-
+ 
 - $\mathbf{w}$ = жингийн вектор (сурах параметрүүд)
 - $b$ = хазайлтын утга
 - $\mathbf{x}_i$ = түүврийн онцлогийн вектор $i$
 - $z_i$ = "logit" буюу log odds
-
+ 
 ```python
 if issparse(X_array):
     z = X_array.dot(self.weights) + self.bias
@@ -188,9 +201,9 @@ else:
     z = np.dot(X_array, self.weights) + self.bias
 ```
 ## Сигмойд функц
-
-Сигмойд функц нь дээрх шугаман нийлбэр $z$ -ийг магадлал болгоно.
-
+ 
+Гэхдээ дээрх шугаман тэгшитгэл нь ямар ч утгыг өгөх боломжтой. Бид гарсан тэр жинхэнэ утгыг $[0,1]$ хооронд орших магадлал болгох хэрэгтэй.Үүний тулд доорх сигмойд функц илэрхийлэх логистик муруйг ашиглана.
+ 
 $$
 \sigma(z) = \frac{1}{1 + e^{-z}}
 $$
