--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -75,21 +75,28 @@ format:
 
 ## Өгөгдлөө цэвэрлэх
 
-Өгөгдлийн хэлбэр:
+**Өгөгдлийн баганууд:**
 
-$[$ `age`,`workclass`,`fnlwgt`,`education`,`educational-num`,`marital-status`,`occupation`,`relationship`,`race`,`gender`,`capital-gain`,`capital-loss`,`hours-per-week`,`native-country`,`income_>50K` $]$
+[`age`, `workclass`, `fnlwgt`, `education`, `educational-num`, `marital-status`, `occupation`,  `relationship`, `race`, `gender`, `capital-gain`, `capital-loss`, `hours-per-week`, `native-country`, `income_>50K`]
 
-Бид анхны өгөгдөлөө давхардсан, ач холбогдол багатай буюу тайлбарлахад хэцүү баганыг арилгаж хялбаршуулсан.
+Анхны өгөгдлийг шалгасны дараа бид давхардсан, ач холбогдол багатай, болон тайлбарлахад хэцүү багануудыг арилгаж, өгөгдлийг хялбаршуулсан.
 
 **Ашигласан хувьсагчид (9):**
 
-- Тоон (5): `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
+- Тоон хувьсагч (5): `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
 
-- Чанарын (4): `education`, `marital-status`, `occupation`, `gender`
+- Чанарын хувьсагч (4): `education`, `marital-status`, `occupation`, `gender`
+
+Энэ нь загварын хурд, үр ашиг, тайлбарлах чадварыг нэмэгдүүлэх зорилготой.
 
 ## Өгөгдөл хуваах
 
-Бид өгөгдлийг сургалт/баталгаажуулалт гэсэн хоёр хэсэгт **80/20** харьцаатайгаар, хоёр хэсэгт `income_>50K` классын харьцаа тэнцүү байхаар хувааж, `train_split.csv`, `val_split.csv` файлд хадгалсан. Анхны өгөгдлийн багц дотор `income_>50K`-н 76% нь 0, 24% нь 1 утгатай бол хуваасны дараа энэ харьцаа эвдлээгүй гэсэн үг.
+Бид өгөгдлийг сургалт болон баталгаажуулалт гэсэн хоёр хэсэгт **80/20** харьцаатайгаар хуваасан. Ингэхдээ income_>50K классын харьцаа тэнцвэртэй байхаар хуваасан бөгөөд үр дүнд нь дараах 2 файлыг үүсгэж хадгалсан:
+
+- Сургалтын багц: `train_split.csv`
+- Баталгаажуулалтын багц: `val_split.csv`
+
+Анхны өгөгдлийн багц дотор `income_>50K` хувьсагчийн 76% нь 0, 24% нь 1 утгатай байсан бол хуваалтын дараа энэ харьцаа эвдрээгүй, хэвээрээ үлдсэн.
 
 ## Урьдчилсан боловсруулалт
 
