--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -100,17 +100,21 @@ format:
 
 ## Урьдчилсан боловсруулалт
 
+Логистик регресс загварт өгөгдлийг оруулахын өмнө тоон болон категори хувьсагчийг зохих хэлбэрт хөрвүүлэх шаардлагатай. Энэ процессийг дараах байдлаар хийсэн.
+
 **Тоон хувьсагчид:**  
-StandardScaler нь тоон хувьсагч бүрийг дундаж утга нь 0, стандарт хазайлт нь 1 болохоор нормальчилдаг. Бүх хувьсагчийг түүврийн дундаж руу нь төвлөрүүлснээр градиент дээр суурилсан алгоритмууд илүү хурдан, тогтвортой суралцахад тусална.
+
+StandardScaler ашиглаж тоон хувьсагч бүрийн дундаж утгыг 0, стандарт хазайлтыг 1 болгож нормальчилсан. Учир нь логистик регресс нь градиент дээр суурилсан алгоритм тул хувьсагчийн тархалт, хэмжээнээс хамаарч удаан суралцаж, тогтворгүй байж болно. Иймд хувьсагчийг түүврийн дундаж руу нь төвлөрүүлснээр сургалтын хурд, тогтвортой байдал нэмэгдэнэ.
 
 $$
 X_{\text{scaled}} = \frac{X - \mu}{\sigma}
 $$
 
 **Чанарын хувьсагчид:**  
-OneHotEncoder нь нэг чанарын хувьсагчийг тус бүрийн чанаруудыг илэрхийлэх хоёртын вектор лүү хөрвүүлж, тоон утгаар илэрхийлдэг нь машин сургалтын алгоритмуудад зохимжтой болгоно. Ямар ч дараалал, зэрэглэл авч үздэггүй. 
 
-Жишээлбэл, `education` гэх чанарын хувьсагчийг авч үзье.
+OneHotEncoder ашиглаж чанарын хувьсагч бүрийг хоёртын вектор болгон хөрвүүлсэн. Учир нь машин сургалтын алгоритмууд текст буюу категори утгыг шууд ойлгох боломжгүй тул категори утгыг тоон хэлбэрт хөрвүүлэх шаардлагатай байдаг. Энэ нь ямар ч дараалал, зэрэглэлгүй тус бүрийн категори утгыг 0/1 утгаар илэрхийлдэг.
+
+Жишээлбэл, `education` гэх чанарын хувьсагчийг авч үзье. Үүний утгууд нь:
 
 $[E = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}]$
 
@@ -120,7 +124,7 @@ $$
 f(x) = \begin{cases} [1, 0, 0, 0] & \text{if } x = \text{HS} \\[1mm][0, 1, 0, 0] & \text{if } x = \text{Bachelors} \\[1mm][0, 0, 1, 0] & \text{if } x = \text{Masters} \\[1mm][0, 0, 0, 1] & \text{if } x = \text{Doctorate} \end{cases}
 $$
 
-Кодлогдсон онцлог (feature) бүр нь одоо Бернуллийн санамсаргүй хувьсагч болно.
+Энэ нь тус бүрийн категори хувьсагчийг Бернуллийн хувьсагч болгож байна гэсэн үг юм.
 
 **Загварын гиперпараметр:**
 
