--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -98,9 +98,29 @@ format:
 
 Анхны өгөгдлийн багц дотор `income_>50K` хувьсагчийн 76% нь 0, 24% нь 1 утгатай байсан бол хуваалтын дараа энэ харьцаа эвдрээгүй, хэвээрээ үлдсэн.
 
+```python
+# Өгөгдлийг унших
+df = pd.read_csv("data.csv")
+
+# Ашиглах хувьсагчид
+keep_cols = ["age", "educational-num", "capital-gain", "capital-loss",
+             "hours-per-week", "education", "marital-status", "occupation",
+             "gender", "income_>50K"]
+df = df[keep_cols]
+
+# Сургалт/баталгаажуулалт хуваалт
+train_df, val_df = train_test_split(
+    df, test_size=0.2, random_state=42, stratify=df["income_>50K"]
+)
+
+# Файлуудыг хадгалах
+train_df.to_csv("train_split.csv", index=False)
+val_df.to_csv("val_split.csv", index=False)
+
+```
 ## Урьдчилсан боловсруулалт
 
-Логистик регресс загварт өгөгдлийг оруулахын өмнө тоон болон категори хувьсагчийг зохих хэлбэрт хөрвүүлэх шаардлагатай. Энэ процессийг дараах байдлаар хийсэн.
+Логистик регресс загварт өгөгдлийг оруулахын өмнө тоон болон категори хувьсагчийг зохих хэлбэрт хөрвүүлэх шаардлагатай. Энэ процессыг дараах байдлаар хийсэн.
 
 **Тоон хувьсагчид:**  
 
@@ -130,7 +150,7 @@ $$
 
 - `learning_rate` ойролцоогоор 0.1
 
-- `max_iter` ойролцоогоор 800
+- `max_iter` ойролцоогоор 1000
 
 - `reg_lambda` = 1e-4 (L2)
 
