--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -192,7 +192,7 @@ $$
 z_i = \mathbf{w}^\top \mathbf{x}_i + b
 $$
  
-Үүнд:
+Энд:
  
 - $\mathbf{w}$ = жингийн вектор (сурах параметрүүд)
 - $b$ = хазайлтын утга
@@ -234,7 +234,7 @@ $$
 \ell = -\left[y \log(\hat{y}) + (1-y)\log(1-\hat{y})\right]
 $$
 
-Үүнд:
+Энд:
 
 - $y$ = жинхэнэ утга (0 or 1)
 - $\hat{y}$ = таамагласан утга
@@ -263,7 +263,7 @@ $$
 \frac{\lambda}{2m}\|\mathbf{w}\|^2
 $$
 
-Үүнд:
+Энд:
 
 - $\lambda$ = тогтворжуулалтын хэмжээ (гиперпараметр)
 
@@ -319,7 +319,7 @@ $$
 b \leftarrow b - \alpha \frac{\partial \mathcal{L}}{\partial b}
 $$
 
-Үүнд:
+Энд:
 
 - $\mathbf{X}$ = онцлогийн матриц ($m \times n$)
 
