--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -124,7 +124,7 @@ val_df.to_csv("val_split.csv", index=False)
 
 **Тоон хувьсагчид:**  
 
-StandardScaler ашиглаж тоон хувьсагч бүрийн дундаж утгыг 0, стандарт хазайлтыг 1 болгож нормальчилсан. Учир нь логистик регресс нь градиент дээр суурилсан алгоритм тул хувьсагчийн тархалт, хэмжээнээс хамаарч удаан суралцаж, тогтворгүй байж болно. Иймд хувьсагчийг түүврийн дундаж руу нь төвлөрүүлснээр сургалтын хурд, тогтвортой байдал нэмэгдэнэ.
+StandardScaler ашиглаж тоон хувьсагч бүрийн дундаж утгыг 0, стандарт хазайлтыг 1 болгож нормальчилсан. Учир нь логистик регресс нь градиент дээр суурилсан алгоритм тул хувьсагчийн тархалт, хэмжээнээс хамаарч удаан суралцаж, тогтворгүй байж болно. Иймд хувьсагчийг түүврийн дундаж руу нь төвлөрүүлснээр сургалтын эрчим, тогтвортой байдал нэмэгдэнэ.
 
 $$
 X_{\text{scaled}} = \frac{X - \mu}{\sigma}
@@ -160,11 +160,11 @@ $$
 
 # Загварын хэрэгжүүлэлт
 
-Бид энэ төсөлд логистик регрессийн загварыг гараар хэрэгжүүлсэн. Яагаад гэвэл sklearn-ийн `LogisticRegression` нь олон зүйлийг автоматаар хийдэг бөгөөд бид хэрхэн ажилладгийг нь ойлгохыг илүүд үзлээ. Мөн сурах хурдны бууралт, class weighting зэрэг сонирхолтой зүйлсийг өөрсдөө туршиж үзэхийг хүссэн.
+Бид энэ төсөлд логистик регрессийн загварыг гараар хэрэгжүүлсэн. Яагаад гэвэл sklearn-ийн `LogisticRegression` нь олон зүйлийг автоматаар хийдэг бөгөөд бид хэрхэн ажилладгийг нь ойлгохыг илүүд үзлээ. Мөн сурах эрчмийн бууралт, class weighting зэрэг сонирхолтой зүйлсийг өөрсдөө туршиж үзэхийг хүссэн.
 
 ## Логистик регрессийн үндэс
  
-Логистик регресс нь хоёртын ангилал хийх суурь загваруудын нэг юм. Шугаман регресс нь тасралтгүй утгуудыг таамагладаг бол логистик регресс нь аливаа инстанц нь тодорхой классын байх магадлалыг тооцоолдог.
+Логистик регресс нь хоёртын ангилал хийх суурь загваруудын нэг юм. Шугаман регресс нь тасралтгүй утгуудыг таамагладаг бол логистик регресс нь аливаа инстанц нь тодорхой классын гишүүн байх магадлалыг тооцоолдог.
  
 Оролтын хувьсагч $\mathbf{x}$ -н хувьд
 $$
@@ -173,19 +173,26 @@ $$
  
 буюу гаралт $y$ нь $1$-тэй тэнцүү байх магадлалыг олох зорилготой.
  
-Энэ төслийн хувьд бидний зорилтод хувьсагч маань `income > 50K` үед `1`, `income` $\leq50K$ үед $0$ гэсэн хоёр л утга авна. Иймээс түүвэр болгоны хувьд энэ хувьсагчийг санамсаргүй хувьсагч болгон загварчилж болно.  
+Энэ төслийн хувьд бидний зорилтод хувьсагч маань `income > 50K` үед `1`, `income` $\leq50K$ үед $0$ гэсэн хоёр л утга авна. Иймээс түүвэр болгоны хувьд энэ хувьсагчийг санамсаргүй хувьсагчаар загварчилж болно.
  
 $$
 y_i \sim \text{Bernoulli}(p_i)
 $$
  
-Энд амжилтын магадлал $p_i$ нь онцлог $x_i$-с хамаардаг. Модел нэг түүврийн хувьд таамаглах магадлал нь дараах томъёгоор илэрхийлэгдэнэ:
- 
+Энд
+
+- $y_i$ = i-р түүвэр дээр ажиглагдсан утга 
+
+- $p_i$ = $P(y_i = 1 \mid \mathbf{x}_i)$ = i-р түүвэр класс 1-ийн гишүүн байх магадлал
+
+Нэг түүврийн тархалт нь:
+
 $$
-p_i = P(y_i=1 \mid x_i) = \sigma(w^\top x_i + b)
+P(y_i \mid p_i) = p_i^{y_i}(1 - p_i)^{1 - y_i}.
 $$
- 
- 
+
+Одоо бид гарт оролтын онцлог $\mathbf{x}_i$-с класс 1-ийн магадлалыг илэрхийлэх функц хэрэгтэй байна.
+
 Эхлээд бид оролтуудын шугаман тэгшитгэлийг бодно:
  
 $$
@@ -196,8 +203,7 @@ $$
  
 - $\mathbf{w}$ = жингийн вектор (сурах параметрүүд)
 - $b$ = хазайлтын утга
-- $\mathbf{x}_i$ = түүврийн онцлогийн вектор $i$
-- $z_i$ = "logit" буюу log odds
+- $\mathbf{x}_i$ = онцлогийн вектор $i$
  
 ```python
 if issparse(X_array):
@@ -207,7 +213,7 @@ else:
 ```
 ## Сигмойд функц
  
-Гэхдээ дээрх шугаман тэгшитгэл нь ямар ч утгыг өгөх боломжтой. Бид гарсан тэр жинхэнэ утгыг $[0,1]$ хооронд орших магадлал болгох хэрэгтэй.Үүний тулд доорх сигмойд функц илэрхийлэх логистик муруйг ашиглана.
+Гэхдээ дээрх шугаман тэгшитгэл нь ямар ч жинхэнэ утгыг өгөх боломжтой. Бид гарсан тэр жинхэнэ утгыг $[0,1]$ хооронд орших магадлал болгох хэрэгтэй. Үүний тулд доорх сигмойд функцээр илэрхийлэгдэх логистик муруйг ашиглана.
  
 $$
 \sigma(z) = \frac{1}{1 + e^{-z}}
@@ -221,27 +227,64 @@ def sigmoid(self, z):
 Эндээс модел нэг түүврийн хувьд таамаглах магадлал нь дараах томъёгоор илэрхийлэгдэнэ:
 
 $$
-\hat{p}_i = P(y_i = 1 \mid \mathbf{x}_i) = \sigma(z_i) = \sigma(\mathbf{w}^T \mathbf{x}_i + b)
+\hat{p}_i = P(y_i = 1 \mid \mathbf{x}_i) = \sigma(z_i) = \sigma(\mathbf{w}^\top \mathbf{x}_i + b)
 $$
 
-## Алдааны функц
+## Эх олонгогийн үнэний хувь
 
-Одоо бид загварыг яаж сургахын тулд алдааны функцийг тодорхойлох хэрэгтэй. Логистик регресст binary cross-entropy хэмээх ойлголтыг ашигладаг.
-
-Нэг таамаглалын хувьд алдаа нь:
+Бүх $y_i$ нь Бернуллийн санамсаргүй утга. Өгөгдлийн цэгүүд нь бусдаасаа хамааралгүй гэж үзвэл
+$w, b$ хоёр параметрүүдийг өгсөн үед бүх $y_i$-г ажиглах магадлал нь:
 
 $$
-\ell = -\left[y \log(\hat{y}) + (1-y)\log(1-\hat{y})\right]
+\mathcal{L}(w,b) = \prod_{i=1}^{m} \hat{p}_i^{y_i} (1 - \hat{p}_i)^{1-y_i}
 $$
 
 Энд:
 
 - $y$ = жинхэнэ утга (0 or 1)
-- $\hat{y}$ = таамагласан утга
+- $\hat{p}$ = таамагласан утга
+
+Үнэний хувийн функц нь $w, b$ хоёр параметрүүдийг өгсөн үед бидний эх олонлог ажиглагдах магадлал хэд вэ гэдгийг олж болно гэсэн үг. Энд хамгийн их үнэний хувь бүхий үнэлгээг (maximum likelihood estimation) хийснээр хамгийн оновчтой параметрүүдийг олно.
+
+## Үнэний хувиар алдааг илэрхийлэх
+
+Хэрвээ бид үржвэрүүдтэй ажиллах бол компьютер дүрслэх боломжгүй жижиг тоотой ажиллах хэрэгтэй болох тул үнэний хувийн функц $\mathcal{L}(w,b)$-н натурал логарифмийг авна.
+
+$$
+\log \mathcal{L}(w,b) = \sum_{i=1}^{m}
+\left[
+y_i \log(\hat{p}_i) + (1-y_i)\log(1 - \hat{p}_i)
+\right]
+$$
+
+Энийг алдааны функц болгохын тулд $-1$-р үржүүлнэ. Өөрөөр хэлбэл binary cross-entropy loss фунцкээ гаргаж ирлээ.
+
+$$
+L_{\text{CE}}(w,b) = 
+-\sum_{i=1}^{m}
+\left[
+y_i \log(\hat{p}_i)
++ (1-y_i)\log(1-\hat{p}_i)
+\right]
+$$
+
+## Binary cross-entropy
+
+Нэг түүврийн алдааг олох томъёо:
+
+$$
+\ell = -\left[y\log(\hat{p}) + (1-y)\log(1-\hat{p})\right].
+$$
+
+буюу:
+
+- $if$ $y = 1\: \ell = -\log(\hat{p})$
+
+- $if$ $y = 0\: \ell = -\log(1 - \hat{p})$
 
 Cross-entropy нь загварыг итгэлтэйгээр буруу таамаглал гаргахыг илүү шийтгэдэг. Өөрөөр хэлбэл 1 эсвэл 0-тэй маш ойрхон магадлал (0.99, 0.01 г.м.) гаргаад энэ нь буруу болж таарвал алдаа нь өндөр гарч ирнэ.
 
-| Таамаглал $\hat{y}$ | Алдаа $-\log(\hat{y})$ | Шийтгэлийн түвшин |
+| Таамаглал $\hat{p}$ | Алдаа $-\log(\hat{p})$ | Шийтгэлийн түвшин |
 |---------------------|----------------------|----------------|
 | 0.99 (итгэлтэй, зөв) | 0.01 | Маш бага |
 | 0.50 (итгэл багатай) | 0.69 | Дунд зэргийн |
@@ -251,7 +294,7 @@ Cross-entropy нь загварыг итгэлтэйгээр буруу таам
 $$
 L_{\text{CE}} = -\frac{1}{m}\sum_{i=1}^{m} 
 \left[
-y_i \log(\hat{y}_i) + (1 - y_i)\log(1 - \hat{y}_i)
+y_i \log(\hat{p}_i) + (1 - y_i)\log(1 - \hat{p}_i)
 \right].
 $$
 
@@ -265,7 +308,7 @@ $$
 
 Энд:
 
-- $\lambda$ = тогтворжуулалтын хэмжээ (гиперпараметр)
+- $\lambda$ = тогтворжуулалтын хүч (гиперпараметр)
 
 - $m$ = түүврийн хэмжээ
 
@@ -274,7 +317,7 @@ $$
 Нийт алдаа:
 
 $$
-L = -\frac{1}{m}\sum_{i=1}^{m}\left[y_i\log(\hat{y}_i) + (1-y_i)\log(1-\hat{y}_i)\right] + \frac{\lambda}{2m}\|\mathbf{w}\|^2
+L = -\frac{1}{m}\sum_{i=1}^{m}\left[y_i\log(\hat{p}_i) + (1-y_i)\log(1-\hat{p}_i)\right] + \frac{\lambda}{2m}\|\mathbf{w}\|^2
 $$
 
 ```python
@@ -300,11 +343,29 @@ def compute_loss(self, y_true, y_pred, sample_weights=None):
 
 ## Градиент бууруулалт (Gradient descent)
 
-Одоо манай алдагдлын функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөгдөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор. Градиент бууруулалтын үндсэн санаа нь уг градиентыг тооцоолоход оршино. 
+Одоо манай алдагдлын функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөгдөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор. 
+
+Градиент бууруулалтын үндсэн санаа нь уг градиентыг тооцоолоход оршино. 
+
+Жингийн градиент:
 
 $$
 \frac{\partial \mathcal{L}}{\partial \mathbf{w}} = \frac{1}{m} \mathbf{X}^\top (\hat{\mathbf{p}} - \mathbf{y}) + \frac{\lambda}{m} \mathbf{w}
 $$
+
+- $\mathbf{X} \in \mathbb{R}^{m \times n}$: онцлогийн матриц ($m \times n$)
+- $\mathbf{w} \in \mathbb{R}^{n \times 1}$: жингийн вектор 
+- $\hat{\mathbf{p}} \in \mathbb{R}^{m \times 1}$: түүвэр болгоны таамагласан утга 
+- $\mathbf{y} \in \mathbb{R}^{m \times 1}$: жинхэнэ утгууд 
+- $\lambda$: тогворжуулалтын хүч  
+
+Жингийн градиент нь $n \times 1$ вектор.
+
+$$
+\frac{\partial \mathcal{L}}{\partial \mathbf{w}} \in \mathbb{R}^{n \times 1}
+$$
+
+Хазайлтын градиент:
 
 $$\frac{\partial \mathcal{L}}{\partial b} = \frac{1}{m} \sum_{i=1}^{m} (\hat{p}_i - y_i)
 $$
@@ -319,15 +380,8 @@ $$
 b \leftarrow b - \alpha \frac{\partial \mathcal{L}}{\partial b}
 $$
 
-Энд:
 
-- $\mathbf{X}$ = онцлогийн матриц ($m \times n$)
-
-- $\hat{\mathbf{p}}$ = таамагласан магадлалууд
-
-- $\mathbf{y}$ = жинхэнэ утгууд
-
-- $\alpha$ = сурах хурд нь болно. $\alpha$ нь тогтмол утга бөгөөд нэг сургалтын итераци болгонд жин, хазайлт хоёрын өөрчлөлтийг удирдах коэффициент.
+$\alpha$ = сурах эрчим. $\alpha$ нь тогтмол утга бөгөөд нэг сургалтын итераци болгонд жин, хазайлт хоёрын өөрчлөлтийг удирдах коэффициент.
 
 ```python
 def _compute_gradients(self, X, y, y_pred):
@@ -354,40 +408,14 @@ def _compute_gradients(self, X, y, y_pred):
     return dw, db
 ```
 
-Параметрүүдийг градиентын эсрэг чиглэл рүү засах, градиент бууруулалт хийх алхам:
+Сургалт нь дараах нөхцлийн аль нэг нь биелэхэд зогсоно:
+1. сургалтын алдаа тодорхой утга руу нийлэх үед
+2. `max_iter` 1000 давах үед
+3. баталгаажуулалтын алдаа нь багасахаа болих үед (early stopping)
 
-## Пайплайн
+## Нэмэлт
 
-Sklearn-ийн `Pipeline` нь бүх зүйлийг зохион байгуулахад туслана. Бид preprocess (StandardScaler + OneHotEncoder) болон манай custom LogisticRegression-г нэг л обьект болгон нэгтгэж чаддаг:
 
-```python
-from sklearn.pipeline import Pipeline
-from sklearn.compose import ColumnTransformer
-from sklearn.preprocessing import StandardScaler, OneHotEncoder
-
-# Тоон ба категори баганыг тусгаарлах
-num_features = ['age', 'educational-num', 'capital-gain', 'capital-loss', 'hours-per-week']
-cat_features = ['education', 'marital-status', 'occupation', 'gender']
-
-# Preprocessing pipeline
-preprocessor = ColumnTransformer([
-    ('num', StandardScaler(), num_features),
-    ('cat', Pipeline([
-        ('encoder', OneHotEncoder(drop='first', sparse_output=False, handle_unknown='ignore'))
-    ]), cat_features)
-])
-
-# Бүтэн pipeline
-model = Pipeline([
-    ('preprocess', preprocessor),
-    ('logreg', LogisticRegression(
-        learning_rate=0.1, max_iter=800, reg_lambda=1e-4,
-        lr_decay=1e-4, class_weight='balanced', threshold=0.5
-    ))
-])
-
-model.fit(X_train, y_train)
-```
 
 # Үр дүн
 
